@@ -1,3 +1,8 @@
+Thu May 22 10:51:39 CEST 2008 Denis Barbier <barbier@users.sourceforge.net>
+
+	* src/org/jcae/mesh/oemm/MeshReader.java: Fix NullPointerException
+	in buildMesh() when adjacency relations are requested.
+
 Wed Mar 26 13:26:57 CET 2008 Denis Barbier <barbier@users.sourceforge.net>
 
 	* src/org/jcae/mesh/xmldata/MeshReader.java (readObject3D): Discard
